@@ -132,8 +132,8 @@ c58a162ab33e2d4841b7ccde59fa022506ef5dcc assets/createbigcannons/blockstates/ver
 8cc31b88cd6093baa4caddb02ff7f7ff793299f4 assets/createbigcannons/blockstates/wrought_iron_cannon_end.json
 303668cdb3754018ca137ea6074801c6927d3987 assets/createbigcannons/blockstates/wrought_iron_drop_mortar_end.json
 d942040026b2849ca2153a9933e8dc0c5c39f3c9 assets/createbigcannons/blockstates/yaw_controller.json
-8fb75f78fd58beb136ea3448416ea400036e38be assets/createbigcannons/lang/en_ud.json
-b3a69f99c97e6b8428cf856f5d31585c9c4c75cd assets/createbigcannons/lang/en_us.json
+2a65b015b26d5719b6e30375ebc6368500f78898 assets/createbigcannons/lang/en_ud.json
+c3edfe1b7109f8e50e5fb4adff04d38cb34baf63 assets/createbigcannons/lang/en_us.json
 c6129d8380bcb26579fc200fc054f4a485ad9b2a assets/createbigcannons/models/block/ap_shell.json
 14e7b948a05007b8c96e35f92f0bff66427de7b8 assets/createbigcannons/models/block/ap_shot.json
 7157cc923bd4f217cb47117fbfe2b9542e367d17 assets/createbigcannons/models/block/autocannon/bronze_autocannon_spring.json
