@@ -13,6 +13,9 @@
   "block.createbigcannons.autocannon.tooltip.weightImpact": "Weight Impact",
   "block.createbigcannons.autocannon.tooltip.weightImpact.goggles": "_%sx RPM_",
   "block.createbigcannons.autocannon_ammo_container": "Autocannon Ammo Container",
+  "block.createbigcannons.autocannon_ammo_container.tooltip.main_ammo": "x%1$s %2$s",
+  "block.createbigcannons.autocannon_ammo_container.tooltip.tracer_spacing": "Tracer Spacing: 1 tracer every %s round(s)",
+  "block.createbigcannons.autocannon_ammo_container.tooltip.tracers": "Tracers: x%1$s %2$s",
   "block.createbigcannons.autocannon_barrel_cast_mould": "Autocannon Barrel Cast Mould",
   "block.createbigcannons.autocannon_breech_cast_mould": "Autocannon Breech Cast Mould",
   "block.createbigcannons.autocannon_recoil_spring_cast_mould": "Autocannon Recoil Spring Cast Mould",
