@@ -29,6 +29,7 @@ Added:
    - #createbigcannons:big_cannon_cartridges
    - #createbigcannons:big_cannon_propellant_bags
 - Added ability to place Autocannon Ammo Containers as blocks
+- Added tooltip to Autocannon Ammo Container showing contained items and spacing
 Changes:
 - Reduced the stress cost of the Cannon Loader to match that of the Mechanical Piston
 - Reduced default blob count of Fluid Shell
